# hass-evcc

./: .devcontainer.json  CONTRIBUTING.md  README.md  README_EXAMPLE.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml
config/: configuration.yaml
custom_components/evcc/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/evcc/translations/: en.json
custom_components/integration_blueprint/: __init__.py  config_flow.py  entity.py  manifest.json  sensor.py  switch.py
scripts/: develop  setup
